--- a/poster.tex
+++ b/poster.tex
@@ -58,8 +58,7 @@
           \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           \item $$x = \int_0^1 t^2 \,dF(t).$$
           \item in voluptate velit \alert{esse cillum dolore} eu fugiat nulla pariatur.
-          \item Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-          \item officia deserunt mollit anim id est laborum.
+          \item Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.
         \end{itemize}
       \end{block}
     \end{column}
@@ -96,7 +95,6 @@
               \item Ut enim ad minim veniam,
               \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               \item $$x = \int_0^1 t^2 \,dF(t).$$
-              \item in voluptate velit \alert{esse cillum dolore} eu fugiat nulla pariatur.
             \end{itemize}
           \end{block}
         \end{column}
@@ -107,8 +105,6 @@
               \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               \item $$x = \int_0^1 t^2 \,dF(t).$$
               \item in voluptate velit \alert{esse cillum dolore} eu fugiat nulla pariatur.
-              \item Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              \item officia deserunt mollit anim id est laborum.
             \end{itemize}
           \end{block}
         \end{column}
@@ -117,7 +113,7 @@
   \end{columns}
 
   % The penn logo
-  \begin{textblock}{10}(1.75, 15)
+  \begin{textblock}{10}(1.75, 15.5)
    \includegraphics[scale=2]{penn}
   \end{textblock}
 
