--- a/beamerthemeconfposter.sty
+++ b/beamerthemeconfposter.sty
@@ -22,47 +22,32 @@
 \definecolor{pennLightBlue}{HTML}{045ea7}
 \definecolor{pennRed}{HTML}{95001a}
 
-% set colors for blocks
+% Set colors for blocks
 \setbeamercolor{block title}{fg=black, bg=white}
 \setbeamercolor{block body}{fg=black, bg=white}
-
-% set some beamer theme options
-\setbeamertemplate{title page}[default][colsep=-4bp]
-\setbeamertemplate{sections/subsections in toc}[square]
-\setbeamertemplate{items}[circle]
-\setbeamertemplate{blocks}[width=0.0]
-\beamertemplatenavigationsymbolsempty
-
-% set bibliography style
-\setbeamertemplate{bibliography item}[text]
-\setbeamercolor{bibliography item}{fg=black,bg=white}
-\setbeamercolor{bibliography entry author}{fg=black,bg=white}
-\setbeamercolor{bibliography item}{fg=black,bg=white}
-
-% define some length variables that are used by the template
-\newlength{\inboxwd}
-\newlength{\iinboxwd}
-\newlength{\inboxrule}
-\makeatletter
-\makeatother
 
 % Set the alert color
 \setbeamercolor{alerted text}{fg=pennRed}
 
-%==============================================================================
-% build the poster title
-%==============================================================================
+% Poster title
 \setbeamertemplate{headline}{
  \leavevmode
+ % Comment this out to remove header
+ \begin{tikzpicture}
+   \fill[pennBlue] (0, 0) rectangle (\textwidth, 10);
+   \fill[pennRed] (0, 0) -- (0.1\textwidth, 10) -- (0, 10) -- (0, 0);
+   \fill[pennRed] (0.9\textwidth, 10) -- (\textwidth, 10) -- (\textwidth, 0) -- cycle;
+ \end{tikzpicture}
+ \vskip-3.6in
   \begin{columns}
    \begin{column}{\linewidth}
     \vskip2cm
     \centering
-    \textsf{\usebeamercolor{title in headline}{\color{black}\Huge{\textbf{\inserttitle}}\\[0.5ex]}}
-    \textsf{\usebeamercolor{author in headline}{\color{fg}\Large{\insertauthor}\\[1ex]}}
+    \textsf{\usebeamercolor{title in headline}{\color{white}\Huge{\textbf{\inserttitle}}\\[0.5ex]}}
+    \textsf{\usebeamercolor{author in headline}{\color{white}\Large{\insertauthor}\\[1ex]}}
    \end{column}
   \end{columns}
-  \vskip-1in
+  \vskip0.7in
 }
 
 % Block definition
@@ -74,7 +59,7 @@
     \huge\textsf{\insertblocktitle}
   \end{beamercolorbox}
   \begin{tikzpicture}[remember picture,overlay]
-    \fill[pennBlue]
+    \fill[pennLightBlue]
     (0,0) rectangle (\textwidth,0.3cm);
   \end{tikzpicture}
   \vspace{1in}
@@ -89,34 +74,6 @@
 
 \setbeamertemplate{block end}
 {
-  \end{beamercolorbox}
-  \vskip\smallskipamount
-}
-
-% Alert block definition (with frame)
-\setbeamertemplate{block alerted begin}
-{
-  \par\vskip\medskipamount
-  \begin{beamercolorbox}[center]{block alerted title}
-    \vskip0.02cm
-    \large\insertblocktitle
-    \vskip0.4cm
-  \end{beamercolorbox}
-  \begin{beamercolorbox}[center]{block alerted title}
-  \setlength{\inboxwd}{\linewidth}
-  \addtolength{\inboxwd}{-1cm}
-  \begin{beamercolorbox}[center]{block alerted body}
-  \begin{center}
-  \begin{minipage}{\inboxwd}
-  \vskip1cm
-  \justifying
-}
-
-\setbeamertemplate{block alerted end}
-{
-  \end{minipage}
-  \end{center}
-  \end{beamercolorbox}
   \end{beamercolorbox}
   \vskip\smallskipamount
 }
