--- a/poster.tex
+++ b/poster.tex
@@ -59,6 +59,11 @@
           \item $$x = \int_0^1 t^2 \,dF(t).$$
           \item in voluptate velit \alert{esse cillum dolore} eu fugiat nulla pariatur.
           \item Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.
+          \item Lorem ipsum \alert{dolor} sit amet, consectetur adipiscing,
+          \item sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          \item Ut enim ad minim veniam,
+          \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          \item Lorem ipsum \alert{dolor} sit amet, consectetur adipiscing,
         \end{itemize}
       \end{block}
     \end{column}
@@ -95,6 +100,9 @@
               \item Ut enim ad minim veniam,
               \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               \item $$x = \int_0^1 t^2 \,dF(t).$$
+              \item Lorem ipsum \alert{dolor} sit amet, consectetur adipiscing,
+              \item sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              \item Ut enim ad minim veniam,
             \end{itemize}
           \end{block}
         \end{column}
@@ -105,6 +113,10 @@
               \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               \item $$x = \int_0^1 t^2 \,dF(t).$$
               \item in voluptate velit \alert{esse cillum dolore} eu fugiat nulla pariatur.
+              \item Lorem ipsum \alert{dolor} sit amet, consectetur adipiscing,
+              \item sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              \item Ut enim ad minim veniam,
+              \item quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             \end{itemize}
           \end{block}
         \end{column}
